<resources>
    <string name="app_name">SistemFitness</string>
    <!--<string name="google_maps_key">AIzaSyByiwZbUxtT78DMglHKvS2zHGANZbpmKNc</string>-->
    <string name="google_maps_key">AIzaSyAPYR4EO-U2deKsKbXyNLR06ynnVaO0jCA</string>

    // INTRO
    <string name="intro_0">"Більше 120 індивідуальних\nта групових послуг"</string>
    <string name="intro_1">Зручний планувальник\nз можливістю відміни занять</string>
    <string name="intro_2">Постав перед собою ціль\nі йди до неї, а ми допоможемо</string>
    <string name="intro_3">Ні одна акція або новина\nне пройде мимо</string>
    <string name="intro_t_0">Замовляй послуги</string>
    <string name="intro_t_1">Складай розклад</string>
    <string name="intro_t_2">Досягай цілей</string>
    <string name="intro_t_3">Будь в курсі подій</string>
    <string name="intro_img_0">intro_1</string>
    <string name="intro_img_1">intro_2</string>
    <string name="intro_img_2">intro_3</string>
    <string name="intro_img_3">intro_4</string>

    // Menu
    <string name="m_goals">Мої цілі</string>
    <string name="m_clubs">Клуби</string>
    <string name="m_settings">Налаштування</string>
    <string name="order">Замовлення</string>
    <string name="list_order">Перелік Замовлень</string>

    // Title screen
    <string name="title_ayth_phone">Авторизація</string>
    <string name="title_register">Реєстрація</string>
    <string name="title_clubs">Клуби</string>
    <string name="title_create_content">Формування контенту</string>
    <string name="title_map">MAP</string>
    <string name="title_SMS">Код СМС</string>
    <string name="title_settings">Налаштування</string>
    <string name="title_language">Мова</string>
    <string name="title_profile">Профіль</string>
    <string name="title_order">Замовлення</string>
    <string name="title_list_order">Перелік замовлень</string>

    // Error text
    <string name="er_filled">Треба заповнити</string>
    <string name="er_lenght">Кількість знаків в полі\u0020</string>
    <string name="er_email">Неправильна адреса email</string>
    <string name="er_phone">Неправильний номер телефону</string>

    <!--// Auth-->
    <!--<string name="code_uk">+380</string>-->
    <string name="phone">Телефон</string>
    <string name="contin">Продовжити</string>
    <string name="register">Зареєструватися</string>
    <string name="used">Використовується для входу. Укажіть актуальний номер</string>
    <string name="surname">Прізвище</string>
    <string name="name">І\'мя</string>
    <string name="patronymic">По батькові</string>
    <string name="email">Email</string>
    <string name="code_sms">Код підтвердження з SMS</string>
    <string name="sms_cometo">SMS прийде на вказаний номер телефону</string>
    <string name="no_sms">SMS не приходить</string>


    // Drawer
    <string name="sign_in">УВІЙТИ</string>

    // AddClub
    <string name="city">Місто</string>
    <string name="club">Клуб</string>

    // Setting
    <string name="profile">Профіль</string>
    <string name="language">Мова</string>
    <string name="uk">Українська</string>
    <string name="ru">Російська</string>

    //PROFILE
    <string name="chooser_title">Відкрити за допомогою</string>

    // ORDER


    // CONTENT
    <string name="gallery">Галерея </string>
    <string name="title_gallery">Название галереи</string>
    <string name="descr_content">Описание</string>
    <string name="position">Должность</string>
    <string name="header">Заголовок</string>
    <string name="title_photo">Название фото</string>
    <string name="type_icon">Тип иконки</string>

    <string name="marker">&#8226;</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="marker_txt">Маркер</string>

    <string-array name="icon_type">
        <item>null</item>
        <item>mail</item>
        <item>phone</item>
        <item>pin</item>
        <item>metro</item>
    </string-array>

    <string-array name="icon_name">
        <item>Выберите иконку</item>
        <item>Е-мейл</item>
        <item>Телефон</item>
        <item>Адрес</item>
        <item>Метро</item>
    </string-array>

    <string name="menu_content_title_header">Заглавный блок</string>
    <string name="menu_content_title_title">Заголовок</string>
    <string name="menu_content_title_subtitle">Подзаголовок</string>
    <string name="menu_content_title_text">Абзац</string>
    <string name="menu_content_title_comment">Комментарий</string>
    <string name="menu_content_title_marker">Маркер</string>
    <string name="menu_content_title_photo">Фото</string>
    <string name="menu_content_title_video">Видео</string>
    <string name="menu_content_title_gallery">Галерея</string>
    <string name="menu_content_title_persone">Персона</string>
    <string name="menu_content_title_st_icon">Строка с иконкой</string>
    <string name="menu_content_title_line">Линия</string>

    <string name="menu_content_type_header">header</string>
    <string name="menu_content_type_title">title</string>
    <string name="menu_content_type_subtitle">subtitle</string>
    <string name="menu_content_type_text">text</string>
    <string name="menu_content_type_comment">comment</string>
    <string name="menu_content_type_marker">marker</string>
    <string name="menu_content_type_photo">photo</string>
    <string name="menu_content_type_video">video</string>
    <string name="menu_content_type_gallery">gallery</string>
    <string name="menu_content_type_persone">persone</string>
    <string name="menu_content_type_st_icon">st_icon</string>
    <string name="menu_content_type_line">line</string>

    <string-array name="menu_create_content">
        <item>Заглавный блок</item>
        <item>Заголовок</item>
        <item>Подзаголовок</item>
        <item>Абзац</item>
        <item>Комментарий</item>
        <item>Маркер</item>
        <item>Фото</item>
        <item>Видео</item>
        <item>Галерея</item>
        <item>Тэги</item>
        <item>Персона</item>
        <item>Строка с иконкой</item>
        <item>Линия</item>
    </string-array>

    <string-array name="type_content">
        <item>header</item>
        <item>title</item>
        <item>subtitle</item>
        <item>text</item>
        <item>comment</item>
        <item>marker</item>
        <item>photo</item>
        <item>video</item>
        <item>gallery</item>
        <item>persone</item>
        <item>st_icon</item>
        <item>line</item>
    </string-array>

</resources>
