<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <fitness.sistem.sistemfitness.tools.changeColor.RelativeLayoutGradient
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:color_1="darkPrimary"
        app:color_2="primary">
        <fitness.sistem.sistemfitness.tools.changeColor.ImageViewColor
            android:id="@+id/back"
            android:layout_width="@dimen/d_icon"
            android:layout_height="@dimen/d_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pad_16"
            android:src="@drawable/back"
            app:colorText="textOnPrimary" />

        <fitness.sistem.sistemfitness.tools.changeColor.TextViewColor
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_ayth_phone"
            android:textAllCaps="true"
            android:textSize="18dp"
            app:colorText="textOnPrimary"/>
    </fitness.sistem.sistemfitness.tools.changeColor.RelativeLayoutGradient>

    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/pad_250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_24"
            android:textColorHint="@color/black_50"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/st_12_black_50">

            <fitness.sistem.sistemfitness.tools.changeColor.EditTextMaskColor
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="@dimen/pad_18"
                android:textColorHint="@color/black_50"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                app:mask="+380 __ ___ __ __"
                app:colorCursor="primary"/>
        </android.support.design.widget.TextInputLayout>

        <fitness.sistem.sistemfitness.tools.changeColor.ButtonColor
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/h_button"
            android:layout_marginTop="@dimen/pad_24"
            android:enabled="false"
            android:gravity="center"
            android:paddingLeft="@dimen/pad_24"
            android:paddingRight="@dimen/pad_24"
            android:textAllCaps="true"
            android:text="@string/contin"
            app:colorText="textOnAccent"
            app:color_1="accent"
            app:color_2="lightAccent"/>

    </LinearLayout>

    <fitness.sistem.sistemfitness.tools.changeColor.ButtonColor
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/h_button"
        android:layout_marginTop="@dimen/pad_32"
        android:gravity="center"
        android:paddingLeft="@dimen/pad_24"
        android:paddingRight="@dimen/pad_24"
        android:textAllCaps="true"
        android:text="@string/register"
        app:colorText="textOnPrimary"
        app:color_1="primary"
        app:color_2="lightPrimary"/>

</LinearLayout>