<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <fitness.sistem.sistemfitness.tools.changeColor.RelativeLayoutGradient
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:color_1="darkPrimary"
        app:color_2="primary">
        <fitness.sistem.sistemfitness.tools.changeColor.ImageViewColor
            android:id="@+id/back"
            android:layout_width="@dimen/d_icon"
            android:layout_height="@dimen/d_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pad_16"
            android:src="@drawable/back"
            app:colorText="textOnPrimary" />

        <fitness.sistem.sistemfitness.tools.changeColor.TextViewColor
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_clubs"
            android:textAllCaps="true"
            android:textSize="18dp"
            app:colorText="textOnPrimary"/>
    </fitness.sistem.sistemfitness.tools.changeColor.RelativeLayoutGradient>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black_50"
        android:layout_marginTop="@dimen/pad_16"
        app:hintTextAppearance="@style/st_12_black_50"
        android:layout_marginLeft="@dimen/pad_32"
        android:layout_marginRight="@dimen/pad_32">

        <fitness.sistem.sistemfitness.tools.changeColor.EditTextColor
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/st_16_black"
            android:textColorHint="@color/black_50"
            android:hint="@string/city"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true"
            app:colorCursor="primary"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black_50"
                android:layout_marginTop="@dimen/pad_16"
                app:hintTextAppearance="@style/st_12_black_50"
                android:layout_marginLeft="@dimen/pad_32"
                android:layout_marginRight="@dimen/pad_32">

                <fitness.sistem.sistemfitness.tools.changeColor.EditTextColor
                    android:id="@+id/club"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/st_16_black"
                    android:textColorHint="@color/black_50"
                    android:hint="@string/club"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:colorCursor="primary"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerClub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"/>
    </RelativeLayout>
</LinearLayout>